<resources>
    <string name="app_name">淘妈咪代理管家</string>
    <string name="string_active_code">授权码</string>
    <string name="string_agent">代理</string>
    <string name="string_mine">我的</string>
    <string name="string_code_history">历史记录</string>
    <string name="string_code_of_your_gen">您生成的激活码为</string>
    <string name="string_click_copy">点击复制</string>
    <string name="string_click_gen_code">一键生成授权码</string>
    <string name="string_active_your_account">你的账号需要激活，去激活</string>
    <string name="string_your_account_need_active">你的账号需要激活</string>
    <string name="string_gen_code_alert">⚠️您正在生成一个授权码，该操作将会消耗掉您的一个授权数量。该操作完成后不可撤销。</string>
    <string name="string_copy_success">复制成功</string>
    <string name="string_code_trade_history">转码记录</string>
    <string name="string_my_agent">我的代理</string>
    <string name="string_my_agent_leader">上级代理</string>
    <string name="string_input_ID">请输入ID</string>
    <string name="string_access_code_trade">授权转让</string>
    <string name="string_search">搜索</string>
    <string name="string_you_at">您于</string>
    <string name="string_trade_to">向该账号转让</string>
    <string name="string_trade_number">个码量</string>
    <string name="string_trade_detail">转码细则</string>
    <string name="string_doing_trade_alert">⚠您正在向转让授权码，该操作将会消耗掉您的授权码量。该操不可撤销。</string>
    <string name="string_access">授权</string>
    <string name="string_input_trade_number">请输入转码数量</string>
    <string name="string_access_trade">授权转让</string>
    <string name="string_trade_confirm_action">确认转让</string>
    <string name="string_gen_act_code_forbidden">账号未激活，不能生成授权码</string>
    <string name="string_grant_cellphone_cancel">取消</string>
    <string name="string_grant_cellphone_confirm">确认</string>
    <string name="string_agent_code_no_enough">您的授权码数量不足</string>
    <string name="string_no_data">没有数据</string>
    <string name="string_history_trade_time">时间</string>
    <string name="string_history_trade_number">数量(授权码)</string>
    <string name="string_history_trade_to">转向</string>
    <string name="string_no_more_data">没有更多的数据了</string>
    <string name="string_my_trunk_agent">我的上级代理</string>
    <string name="string_leader_mark">请输入您上级代理的ID</string>
    <string name="string_confirm">确认</string>
    <string name="string_cancel">取消</string>

    <string name="string_alert_leader">⚠️您正在向上级代理申请授权，该授权一旦申请，将不可变更。</string>
    <string name="string_alert_leader_wechat">⚠请您输入微信号，一旦申请，将不可变更。</string>
    <string name="string_leader_myself_wechat">请输入自己的微信号</string>
    <string name="string_leader_myself">不能输入自己的ID</string>
    <string name="string_your_leader">您的上级代理信息如下：</string>
    <string name="string_ID">ID：</string>
    <string name="string_level">级别：</string>

    <string name="string_no_mark">查无此人</string>
    <string name="string_the_mark_no_reach">您查找的ID尚未得到授权</string>
    <string name="string_reaching">授权处理中...,请稍后</string>
    <string name="string_grant_new_agent">批准新申请</string>
    <string name="string_input_grant_code_number">请输入转让授权码数量</string>
    <string name="string_input_grant_code_number_integer">授权码数量必须为整数</string>
    <string name="string_input_trade_success">转让成功</string>

    <string name="string_trade_num_by_level">您的转让数量小于当前转让级别</string>

    <string name="string_my_bank_account">我的返点账号</string>
    <string name="string_my_bank_alert">⚠️您正在绑定返点账户，该操作成功后无法撤销，请您谨慎操作。</string>
    <string name="string_my_true_name">请输入您的姓名</string>
    <string name="string_my_zhifubao">请输入您的支付宝账户</string>
    <string name="string_your_true_name">您的真实姓名：</string>
    <string name="string_your_zhifubao">您的支付宝账户：</string>
    <string name="string_your_time">绑定时间：</string>
    <string name="string_bank_error">绑定失败</string>
    <!--<string name="string_grant_cellphone_repeat">该号码已经被授权</string>-->


    <!--<string name="string_agents_no_code">您已经没有授权码了</string>-->


    <!--<string name="string_input_grant_data_error">数据错误，请重新搜索</string>-->
    <!--<string name="string_input_trade_fail">转让失败</string>-->

    <!--<string name="string_url_domain">http://172.16.1.187:8080</string>-->
    <!--<string name="string_url_domain">http://192.168.0.112:8080</string>-->
    <!--<string name="string_url_domain">http://10.0.4.176:8080</string>-->
    <string name="string_url_domain">http://taomami.net</string>
    <!--<string name="string_url_domain">http://101.200.56.221:8080</string>-->
    <string name="string_url_account_exist">/agent/exist</string>
    <string name="string_url_account_lost">/agent/lost</string>
    <string name="string_url_account_register">/agent/signup</string>
    <string name="string_url_account_login">/agent/signin</string>
    <string name="string_url_account_password">/agent/password</string>
    <string name="string_url_account_logout">/agent/signout</string>
    <string name="string_url_account_mine">/agent/mine</string>
    <string name="string_url_account_bank">/agent/bank</string>
    <string name="string_url_meta_smsCode">/meta/smsCode</string>
    <string name="string_url_trade_grant">/trade/grant</string>
    <string name="string_url_trade_trade">/trade/trade</string>
    <string name="string_url_trade_upgrade">/trade/upgrade</string>
    <string name="string_url_history_history">/history/history</string>
    <string name="string_url_history_rebate">/history/rebate</string>
    <string name="string_url_mate_beg">/mate/beg</string>
    <string name="string_url_mate_grant">/mate/grant</string>
    <string name="string_url_mate_reject">/mate/reject</string>
    <string name="string_url_mate_leader">/mate/leader</string>
    <string name="string_url_mate_mates">/mate/mates</string>
    <string name="string_url_mate_mate">/mate/mate</string>
    <string name="string_url_version_version">/version/version</string>
    <string name="string_url_readme">/webapp/widgets/static/readme-agent.html</string>
    <string name="string_url_aboutus">/webapp/widgets/static/aboutus-agent.html</string>
    <string name="string_url_introduction">/webapp/widgets/static/introduction-agent.html</string>
    <string name="string_url_tutorial">/webapp/widgets/static/tutorial-agent.html</string>
    <string name="string_url_announcement">/webapp/widgets/static/announcement-agent.html</string>

    <item name="tag_key_1" type="id"></item>
    <item name="tag_key_2" type="id"></item>
    <item name="tag_key_3" type="id"></item>
    <integer name="integer_app_type">2</integer>

</resources>
