<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_act_trunk_nav"
        style="@style/nav_header_of_act"
        android:background="@drawable/shape_agent_gradient">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/string_my_trunk_agent"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <Button
            android:id="@+id/bt_act_trunk_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:text="@string/string_back"
            android:textColor="@color/white" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_act_trunk_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/string_no_data"
        android:textColor="#A1A1A1"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/ll_act_trunk_before_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/string_alert_leader"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/et_act_trunk_leader_mark"
            style="@style/editor"
            android:layout_margin="10dp"
            android:hint="@string/string_leader_mark"
            android:inputType="number"
            android:maxLength="6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/string_alert_leader_wechat"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/et_act_trunk_my_wechat"
            style="@style/editor"
            android:layout_margin="10dp"
            android:hint="@string/string_leader_myself_wechat"
            android:inputType="text"
            android:maxLength="36" />

        <EditText
            android:id="@+id/et_act_trunk_password"
            style="@style/editor"
            android:layout_margin="10dp"
            android:hint="@string/string_input_account_password"
            android:inputType="textPassword"
            android:maxLength="12" />

        <Button
            android:id="@+id/et_act_trunk_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/string_confirm"
            android:textColor="@color/white"
            android:background="@drawable/shape_button_bg"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_act_trunk_after_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/string_your_leader"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_act_trunk_leader_grant_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16dp" />


        <TextView
            android:id="@+id/tv_act_trunk_leader_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_act_trunk_leader_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16dp" />
    </LinearLayout>
</LinearLayout>