<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_gen_code_alert"
        android:textColor="#000000"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/et_act_gen_code_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/string_input_account_password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/et_act_gen_code_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_grant_cellphone_cancel" />

        <Button
            android:id="@+id/et_act_gen_code_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_grant_cellphone_confirm" />
    </LinearLayout>
</LinearLayout>