<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <RelativeLayout
        android:id="@+id/rl_act_agent_nav"
        style="@style/nav_header_of_act">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/string_my_bank_account"
            android:textSize="24dp" />

        <Button
            android:id="@+id/bt_act_bank_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:text="@string/string_back" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_act_bank_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_act_agent_nav"
        android:gravity="center"
        android:text="@string/string_no_data" />

    <LinearLayout
        android:id="@+id/ll_act_bank_display"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_act_agent_nav"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_act_bank_true_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_act_bank_zhifubao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_act_bank_bind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_act_agent_nav"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_act_bank_zhifubao"
            style="@style/editor"
            android:hint="@string/string_my_true_name"
            android:maxLength="36" />

        <EditText
            android:id="@+id/et_act_bank_true_name"
            style="@style/editor"
            android:hint="@string/string_my_zhifubao"
            android:maxLength="36" />

        <EditText
            android:id="@+id/et_act_bank_password"
            style="@style/editor"
            android:hint="@string/string_input_account_password"
            android:inputType="textPassword"
            android:maxLength="12" />

        <Button
            android:id="@+id/bt_act_bank_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/string_confirm" />
    </LinearLayout>

</RelativeLayout>